tests/NormalTests/paczka1/small_fuzzy/46871813.err
Error in line 1: X0sSg S563 48,"
Error in line 6: 6XtgL S785 57,9
Error in line 12: F4ky A724 59,9
